--- a/src/index.html
+++ b/src/index.html
@@ -6,29 +6,32 @@
   </head>
 
   <body>
-    <div class = "input-area">
+    <div class="input-area">
       <input placeholder="TODOを入力"/>
       <button>追加</button>
     </div>
-    <div class = "incomplete-area">
-      <p>未完了のTODO</p>
+    <div class="incomplete-area">
+      <p class="title">未完了のTODO</p>
       <ul>
-        <li>
-          <div>
-            <p>TODO</p>
+          <div class="list-row">
+            <li>TODO</li>
             <button>完了</button>
             <button>削除</button>
           </div>
-        </li>
+          <div class="list-row">
+            <li>TODO</li>
+            <button>完了</button>
+            <button>削除</button>
+          </div>
       </ul>
     </div>
-    <div class = "complete-area">
-      <p>完了したTODO</p>
+    <div class="complete-area">
+      <p class="title">完了したTODO</p>
       <ul>
-        <li>
-          <p>DONE</p>
-          <button>戻す</button>
-        </li>
+          <div class="list-row">
+            <li>DONE</li>
+            <button>戻す</button>
+          </div>
       </ul>
     </div>
     <script src="./index.mjs" type="module"></script>
